--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 40px;
+    align-items: center;
 }
 
 .apresentacao__conteudo__titulo{
@@ -41,22 +42,36 @@ body{
 
 .apresentacao__links{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    width: 381px;
+}
+
+.apresentacao__links__subtitulo {
+    font-family: 'Krona One', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
 }
 
 .apresentacao__links__link{
-    background-color: #22D4FD;
-    width: 280px;
+    width: 378px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
     font-size: 24px;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #000000;
+    color: #F6F6F6;
     font-family: 'Montserrat', sans-serif;
+    border: solid #22D4FD 2px;
+}
+
+.apresentacao__links__link:hover {
+    background-color: #272727;
 }
 
 .imagem-pedro {
     border-radius: 15px;
 }
+
