--- a/style.css
+++ b/style.css
@@ -6,18 +6,32 @@
 }
 
 body{
-    height: 100vh;
     box-sizing: border-box;
     background-color: #000000;
     color: #F6F6F6;
 }
 
-.titulo-destaque{
+.cabecalho {
+    padding: 2% 0 0 15%;
+    color: #F6F6F6;
+    border: solid white 1px;
+}
+
+.cabecalho__menu {
+    display: flex;
+    gap: 80px;
+}
+
+.cabecalho__menu__link {
+    font-family: 'Montserrat' sans-serif;
+    font-weight: 600;
+    font-size: 24px;
     color: #22D4FD;
+    text-decoration: none;
 }
 
 .apresentacao{
-    margin: 10% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -33,6 +47,10 @@ body{
 .apresentacao__conteudo__titulo{
     font-size: 36px;
     font-family: 'Krona One', sans-serif;
+}
+
+.titulo-destaque{
+    color: #22D4FD;
 }
 
 .apresentacao__conteudo__texto{
@@ -55,8 +73,12 @@ body{
 }
 
 .apresentacao__links__link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
     width: 378px;
-    text-align: center;
+    height: 68px;
     border-radius: 8px;
     font-size: 24px;
     font-weight: 600;
@@ -74,4 +96,15 @@ body{
 .imagem-pedro {
     border-radius: 15px;
 }
+
+.rodape {
+    padding: 24px;
+    background-color: #22D4FD;
+    color: #000000;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: normal;
+}
+
 
