--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root {
+    --cor-primaria: #000000;
+    --cor-secundaria: #F6F6F6;
+    --cor-terciaria: #22D4FD;
+    --cor-hover: #272727;
+
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria: 'Montserrat', sans-serif;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -7,13 +17,13 @@
 
 body{
     box-sizing: border-box;
-    background-color: #000000;
-    color: #F6F6F6;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
 
 .cabecalho {
     padding: 2% 0 0 15%;
-    color: #F6F6F6;
+    color: var(--cor-secundaria);
 }
 
 .cabecalho__menu {
@@ -22,10 +32,10 @@ body{
 }
 
 .cabecalho__menu__link {
-    font-family: 'Montserrat' sans-serif;
+    font-family: var(--fonte-secundaria);
     font-weight: 600;
     font-size: 24px;
-    color: #22D4FD;
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
 
@@ -40,21 +50,20 @@ body{
     display: flex;
     flex-direction: column;
     gap: 40px;
-    align-items: center;
 }
 
 .apresentacao__conteudo__titulo{
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
 }
 
 .titulo-destaque{
-    color: #22D4FD;
+    color: var(--cor-terciaria);
 }
 
 .apresentacao__conteudo__texto{
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__links{
@@ -66,7 +75,7 @@ body{
 }
 
 .apresentacao__links__subtitulo {
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 24px;
 }
@@ -83,13 +92,13 @@ body{
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #F6F6F6;
-    font-family: 'Montserrat', sans-serif;
-    border: solid #22D4FD 2px;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
+    border: solid var(--cor-terciaria) 2px;
 }
 
 .apresentacao__links__link:hover {
-    background-color: #272727;
+    background-color: var(--cor-hover);
 }
 
 .imagem-pedro {
@@ -100,9 +109,9 @@ body{
     display: flex;
     justify-content: space-around;
     padding: 24px;
-    background-color: #22D4FD;
-    color: #000000;
-    font-family: 'Montserrat', sans-serif;
+    background-color: var(--cor-terciaria);
+    color: var(--cor-primaria);
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
     font-weight: normal;
 }
